@@ -1,74 +1,50 @@
-/*
- * Copyright (C) 2023-2024 Hedera Hashgraph, LLC
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *      http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
-
+// SPDX-License-Identifier: Apache-2.0
 package com.hedera.node.app.spi.fixtures.info;
 
-import static com.swirlds.platform.test.fixtures.state.TestSchema.CURRENT_VERSION;
+import static com.swirlds.platform.system.address.AddressBookUtils.endpointFor;
 
 import com.hedera.hapi.node.base.AccountID;
-import com.hedera.hapi.node.base.SemanticVersion;
+import com.hedera.hapi.node.base.ServiceEndpoint;
 import com.hedera.pbj.runtime.io.buffer.Bytes;
-import com.swirlds.common.platform.NodeId;
-import com.swirlds.state.spi.info.NetworkInfo;
-import com.swirlds.state.spi.info.NodeInfo;
-import com.swirlds.state.spi.info.SelfNodeInfo;
+import com.swirlds.state.State;
+import com.swirlds.state.lifecycle.info.NetworkInfo;
+import com.swirlds.state.lifecycle.info.NodeInfo;
 import edu.umd.cs.findbugs.annotations.NonNull;
 import edu.umd.cs.findbugs.annotations.Nullable;
 import java.util.List;
+import org.hiero.consensus.model.node.NodeId;
 
 /**
  * Holds fake network information for testing.
  */
 public class FakeNetworkInfo implements NetworkInfo {
     private static final Bytes DEV_LEDGER_ID = Bytes.wrap(new byte[] {0x03});
-    private static final List<NodeId> FAKE_NODE_INFO_IDS = List.of(new NodeId(2), new NodeId(4), new NodeId(8));
-    private static final List<NodeInfo> FAKE_NODE_INFOS = List.of(
+    private static final List<NodeId> FAKE_NODE_INFO_IDS = List.of(NodeId.of(2), NodeId.of(4), NodeId.of(8));
+    public static final List<NodeInfo> FAKE_NODE_INFOS = List.of(
             fakeInfoWith(
                     2L,
                     AccountID.newBuilder().accountNum(3).build(),
                     30,
-                    "333.333.333.333",
-                    50233,
-                    "3333333333333333333333333333333333333333333333333333333333333333",
-                    "Alpha",
-                    "127.0.0.1",
-                    20,
-                    Bytes.wrap("cert1")),
+                    List.of(endpointFor("333.333.333.333", 50233), endpointFor("127.0.0.1", 20)),
+                    Bytes.wrap("cert1"),
+                    List.of(endpointFor("333.333.333.333", 50233)),
+                    false),
             fakeInfoWith(
                     4L,
                     AccountID.newBuilder().accountNum(4).build(),
                     40,
-                    "444.444.444.444",
-                    50244,
-                    "444444444444444444444444444444444444444444444444444444444444444",
-                    "Bravo",
-                    "127.0.0.2",
-                    21,
-                    Bytes.wrap("cert2")),
+                    List.of(endpointFor("444.444.444.444", 50244), endpointFor("127.0.0.2", 21)),
+                    Bytes.wrap("cert2"),
+                    List.of(endpointFor("444.444.444.444", 50211)),
+                    false),
             fakeInfoWith(
                     8L,
                     AccountID.newBuilder().accountNum(5).build(),
                     50,
-                    "555.555.555.555",
-                    50255,
-                    "555555555555555555555555555555555555555555555555555555555555555",
-                    "Charlie",
-                    "127.0.0.3",
-                    22,
-                    Bytes.wrap("cert3")));
+                    List.of(endpointFor("555.555.555.555", 50255), endpointFor("127.0.0.3", 22)),
+                    Bytes.wrap("cert3"),
+                    List.of(endpointFor("555.555.555.555", 50211)),
+                    false));
 
     @NonNull
     @Override
@@ -78,74 +54,8 @@ public class FakeNetworkInfo implements NetworkInfo {
 
     @NonNull
     @Override
-    public SelfNodeInfo selfNodeInfo() {
-        return new SelfNodeInfo() {
-            @NonNull
-            @Override
-            public SemanticVersion hapiVersion() {
-                return CURRENT_VERSION;
-            }
-
-            @Override
-            public boolean zeroStake() {
-                return FAKE_NODE_INFOS.get(0).zeroStake();
-            }
-
-            @Override
-            public long nodeId() {
-                return FAKE_NODE_INFOS.get(0).nodeId();
-            }
-
-            @Override
-            public AccountID accountId() {
-                return FAKE_NODE_INFOS.get(0).accountId();
-            }
-
-            @Override
-            public String memo() {
-                return FAKE_NODE_INFOS.get(0).memo();
-            }
-
-            @Override
-            public String externalHostName() {
-                return FAKE_NODE_INFOS.get(0).externalHostName();
-            }
-
-            @Override
-            public int externalPort() {
-                return FAKE_NODE_INFOS.get(0).externalPort();
-            }
-
-            @Override
-            public String hexEncodedPublicKey() {
-                return FAKE_NODE_INFOS.get(0).hexEncodedPublicKey();
-            }
-
-            @Override
-            public long stake() {
-                return FAKE_NODE_INFOS.get(0).stake();
-            }
-
-            @Override
-            public String internalHostName() {
-                return FAKE_NODE_INFOS.get(0).internalHostName();
-            }
-
-            @Override
-            public int internalPort() {
-                return FAKE_NODE_INFOS.get(0).internalPort();
-            }
-
-            @Override
-            public Bytes sigCertBytes() {
-                return FAKE_NODE_INFOS.get(0).sigCertBytes();
-            }
-
-            @Override
-            public String selfName() {
-                return FAKE_NODE_INFOS.getFirst().selfName();
-            }
-        };
+    public NodeInfo selfNodeInfo() {
+        return FAKE_NODE_INFOS.get(0);
     }
 
     @NonNull
@@ -162,29 +72,26 @@ public class FakeNetworkInfo implements NetworkInfo {
 
     @Override
     public boolean containsNode(final long nodeId) {
-        return FAKE_NODE_INFO_IDS.contains(new NodeId(nodeId));
+        return FAKE_NODE_INFO_IDS.contains(NodeId.of(nodeId));
+    }
+
+    @Override
+    public void updateFrom(final State state) {
+        throw new UnsupportedOperationException("Not implemented");
     }
 
     private static NodeInfo fakeInfoWith(
             final long nodeId,
             @NonNull final AccountID nodeAccountId,
-            long stake,
-            @NonNull String externalHostName,
-            int externalPort,
-            @NonNull String hexEncodedPublicKey,
-            @NonNull String memo,
-            @NonNull String internalHostName,
-            @NonNull int internalPort,
-            @Nullable Bytes sigCertBytes) {
+            long weight,
+            List<ServiceEndpoint> gossipEndpoints,
+            @Nullable Bytes sigCertBytes,
+            List<ServiceEndpoint> hapiEndpoints,
+            boolean declineReward) {
         return new NodeInfo() {
             @Override
             public long nodeId() {
                 return nodeId;
-            }
-
-            @Override
-            public String memo() {
-                return memo;
             }
 
             @Override
@@ -193,33 +100,8 @@ public class FakeNetworkInfo implements NetworkInfo {
             }
 
             @Override
-            public String externalHostName() {
-                return externalHostName;
-            }
-
-            @Override
-            public int externalPort() {
-                return externalPort;
-            }
-
-            @Override
-            public String hexEncodedPublicKey() {
-                return hexEncodedPublicKey;
-            }
-
-            @Override
-            public long stake() {
-                return stake;
-            }
-
-            @Override
-            public String internalHostName() {
-                return internalHostName;
-            }
-
-            @Override
-            public int internalPort() {
-                return internalPort;
+            public long weight() {
+                return weight;
             }
 
             @Override
@@ -228,8 +110,18 @@ public class FakeNetworkInfo implements NetworkInfo {
             }
 
             @Override
-            public String selfName() {
-                return memo;
+            public List<ServiceEndpoint> gossipEndpoints() {
+                return gossipEndpoints;
+            }
+
+            @Override
+            public @NonNull List<ServiceEndpoint> hapiEndpoints() {
+                return hapiEndpoints;
+            }
+
+            @Override
+            public boolean declineReward() {
+                return declineReward;
             }
         };
     }
