@@ -1,28 +1,12 @@
-/*
- * Copyright (C) 2020-2024 Hedera Hashgraph, LLC
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *      http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
-
+// SPDX-License-Identifier: Apache-2.0
 package com.hedera.services.bdd.suites.hip869;
 
 import static com.hedera.node.app.hapi.utils.CommonPbjConverters.toPbj;
 import static com.hedera.services.bdd.junit.EmbeddedReason.MUST_SKIP_INGEST;
 import static com.hedera.services.bdd.junit.EmbeddedReason.NEEDS_STATE_ACCESS;
 import static com.hedera.services.bdd.junit.hedera.utils.AddressBookUtils.endpointFor;
-import static com.hedera.services.bdd.spec.HapiSpec.defaultHapiSpec;
 import static com.hedera.services.bdd.spec.HapiSpec.hapiTest;
-import static com.hedera.services.bdd.spec.PropertySource.asAccount;
+import static com.hedera.services.bdd.spec.keys.TrieSigMapGenerator.uniqueWithFullPrefixesFor;
 import static com.hedera.services.bdd.spec.queries.QueryVerbs.getTxnRecord;
 import static com.hedera.services.bdd.spec.transactions.TxnUtils.WRONG_LENGTH_EDDSA_KEY;
 import static com.hedera.services.bdd.spec.transactions.TxnVerbs.cryptoCreate;
@@ -30,15 +14,21 @@ import static com.hedera.services.bdd.spec.transactions.TxnVerbs.nodeCreate;
 import static com.hedera.services.bdd.spec.utilops.EmbeddedVerbs.viewNode;
 import static com.hedera.services.bdd.spec.utilops.UtilVerbs.newKeyNamed;
 import static com.hedera.services.bdd.spec.utilops.UtilVerbs.overriding;
+import static com.hedera.services.bdd.spec.utilops.UtilVerbs.overridingTwo;
 import static com.hedera.services.bdd.spec.utilops.UtilVerbs.validateChargedUsdWithin;
+import static com.hedera.services.bdd.suites.HapiSuite.ADDRESS_BOOK_CONTROL;
+import static com.hedera.services.bdd.suites.HapiSuite.DEFAULT_PAYER;
 import static com.hedera.services.bdd.suites.HapiSuite.GENESIS;
 import static com.hedera.services.bdd.suites.HapiSuite.NONSENSE_KEY;
 import static com.hedera.services.bdd.suites.HapiSuite.ONE_HBAR;
 import static com.hedera.services.bdd.suites.HapiSuite.ONE_HUNDRED_HBARS;
+import static com.hedera.services.bdd.suites.HapiSuite.SYSTEM_ADMIN;
 import static com.hederahashgraph.api.proto.java.ResponseCodeEnum.GOSSIP_ENDPOINTS_EXCEEDED_LIMIT;
 import static com.hederahashgraph.api.proto.java.ResponseCodeEnum.GOSSIP_ENDPOINT_CANNOT_HAVE_FQDN;
+import static com.hederahashgraph.api.proto.java.ResponseCodeEnum.GRPC_WEB_PROXY_NOT_SUPPORTED;
 import static com.hederahashgraph.api.proto.java.ResponseCodeEnum.INSUFFICIENT_TX_FEE;
 import static com.hederahashgraph.api.proto.java.ResponseCodeEnum.INVALID_ADMIN_KEY;
+import static com.hederahashgraph.api.proto.java.ResponseCodeEnum.INVALID_ENDPOINT;
 import static com.hederahashgraph.api.proto.java.ResponseCodeEnum.INVALID_GOSSIP_CA_CERTIFICATE;
 import static com.hederahashgraph.api.proto.java.ResponseCodeEnum.INVALID_GOSSIP_ENDPOINT;
 import static com.hederahashgraph.api.proto.java.ResponseCodeEnum.INVALID_NODE_ACCOUNT_ID;
@@ -53,6 +43,7 @@ import static com.hederahashgraph.api.proto.java.ResponseCodeEnum.SUCCESS;
 import static com.hederahashgraph.api.proto.java.ResponseCodeEnum.UNAUTHORIZED;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertNull;
 
 import com.google.protobuf.ByteString;
 import com.hedera.services.bdd.junit.EmbeddedHapiTest;
@@ -60,13 +51,12 @@ import com.hedera.services.bdd.junit.HapiTest;
 import com.hedera.services.bdd.junit.HapiTestLifecycle;
 import com.hedera.services.bdd.junit.LeakyEmbeddedHapiTest;
 import com.hedera.services.bdd.junit.LeakyHapiTest;
-import com.hedera.services.bdd.junit.support.TestLifecycle;
 import com.hedera.services.bdd.spec.keys.KeyShape;
+import com.hedera.services.bdd.spec.transactions.node.HapiNodeCreate;
+import com.hedera.services.bdd.spec.utilops.embedded.ViewNodeOp;
 import com.hederahashgraph.api.proto.java.AccountID;
 import com.hederahashgraph.api.proto.java.ServiceEndpoint;
-import com.swirlds.platform.system.address.Address;
 import com.swirlds.platform.test.fixtures.addressbook.RandomAddressBookBuilder;
-import edu.umd.cs.findbugs.annotations.NonNull;
 import java.security.cert.CertificateEncodingException;
 import java.security.cert.X509Certificate;
 import java.util.Arrays;
@@ -76,6 +66,7 @@ import java.util.Spliterators;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import java.util.stream.StreamSupport;
+import org.hiero.consensus.model.roster.Address;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.DynamicTest;
@@ -84,20 +75,22 @@ import org.junit.jupiter.api.DynamicTest;
 public class NodeCreateTest {
 
     public static final String ED_25519_KEY = "ed25519Alias";
-    public static List<ServiceEndpoint> GOSSIP_ENDPOINTS = Arrays.asList(
+    public static List<ServiceEndpoint> GOSSIP_ENDPOINTS_FQDNS = Arrays.asList(
             ServiceEndpoint.newBuilder().setDomainName("test.com").setPort(123).build(),
             ServiceEndpoint.newBuilder().setDomainName("test2.com").setPort(123).build());
-    public static List<ServiceEndpoint> SERVICES_ENDPOINTS = Arrays.asList(ServiceEndpoint.newBuilder()
+    public static List<ServiceEndpoint> SERVICES_ENDPOINTS_FQDNS = List.of(ServiceEndpoint.newBuilder()
             .setDomainName("service.com")
             .setPort(234)
             .build());
+    public static final ServiceEndpoint GRPC_PROXY_ENDPOINT_FQDN = endpointFor("grpc.web.proxy.com", 123);
     public static List<ServiceEndpoint> GOSSIP_ENDPOINTS_IPS =
             Arrays.asList(endpointFor("192.168.1.200", 123), endpointFor("192.168.1.201", 123));
-    public static List<ServiceEndpoint> SERVICES_ENDPOINTS_IPS = Arrays.asList(endpointFor("192.168.1.205", 234));
+    public static List<ServiceEndpoint> SERVICES_ENDPOINTS_IPS = List.of(endpointFor("192.168.1.205", 234));
+    public static final ServiceEndpoint GRPC_PROXY_ENDPOINT_IP = endpointFor("192.168.1.255", 123);
     private static List<X509Certificate> gossipCertificates;
 
     @BeforeAll
-    static void beforeAll(@NonNull final TestLifecycle testLifecycle) {
+    static void beforeAll() {
         gossipCertificates = generateX509Certificates(2);
     }
 
@@ -120,8 +113,9 @@ public class NodeCreateTest {
     @EmbeddedHapiTest(MUST_SKIP_INGEST)
     final Stream<DynamicTest> adminKeyIsMissingEmbedded()
             throws CertificateEncodingException { // skipping ingest but purecheck still throw the same
+
         return hapiTest(nodeCreate("nodeCreate")
-                .setNode("0.0.4") // exclude 0.0.3
+                .setNode("4") // exclude 1.2.3
                 .adminKey(NONSENSE_KEY)
                 .gossipCaCertificate(gossipCertificates.getFirst().getEncoded())
                 .hasKnownStatus(KEY_REQUIRED));
@@ -294,40 +288,23 @@ public class NodeCreateTest {
      * Check that node creation succeeds with gossip and service endpoints using ips and all optional fields are recorded.
      * @see <a href="https://github.com/hashgraph/hedera-improvement-proposal/blob/main/HIP/hip-869.md#specification">HIP-869</a>
      */
-    @EmbeddedHapiTest(NEEDS_STATE_ACCESS)
+    @LeakyEmbeddedHapiTest(
+            reason = NEEDS_STATE_ACCESS,
+            overrides = {"nodes.webProxyEndpointsEnabled"})
     final Stream<DynamicTest> allFieldsSetHappyCaseForIps() throws CertificateEncodingException {
+        final var nodeCreate = canonicalNodeCreate()
+                .gossipEndpoint(GOSSIP_ENDPOINTS_IPS)
+                .serviceEndpoint(SERVICES_ENDPOINTS_IPS)
+                .grpcWebProxyEndpoint(GRPC_PROXY_ENDPOINT_IP);
         return hapiTest(
+                overriding("nodes.webProxyEndpointsEnabled", "true"),
                 newKeyNamed(ED_25519_KEY).shape(KeyShape.ED25519),
-                nodeCreate("nodeCreate")
-                        .description("hello")
-                        .gossipCaCertificate(gossipCertificates.getFirst().getEncoded())
-                        .grpcCertificateHash("hash".getBytes())
-                        .accountId(asAccount("0.0.100"))
-                        .gossipEndpoint(GOSSIP_ENDPOINTS_IPS)
-                        .serviceEndpoint(SERVICES_ENDPOINTS_IPS)
-                        .adminKey(ED_25519_KEY)
-                        .hasPrecheck(OK)
-                        .hasKnownStatus(SUCCESS),
+                nodeCreate,
+                verifyCanonicalCreate(nodeCreate),
                 viewNode("nodeCreate", node -> {
-                    assertEquals("hello", node.description(), "Description invalid");
-                    try {
-                        assertEquals(
-                                ByteString.copyFrom(
-                                        gossipCertificates.getFirst().getEncoded()),
-                                ByteString.copyFrom(node.gossipCaCertificate().toByteArray()),
-                                "Gossip CA invalid");
-                    } catch (CertificateEncodingException e) {
-                        throw new RuntimeException(e);
-                    }
-
-                    assertEquals(
-                            ByteString.copyFrom("hash".getBytes()),
-                            ByteString.copyFrom(node.grpcCertificateHash().toByteArray()),
-                            "GRPC hash invalid");
-                    assertEquals(100, node.accountId().accountNum(), "Account ID invalid");
                     assertEqualServiceEndpoints(GOSSIP_ENDPOINTS_IPS, node.gossipEndpoint());
                     assertEqualServiceEndpoints(SERVICES_ENDPOINTS_IPS, node.serviceEndpoint());
-                    assertNotNull(node.adminKey(), "Admin key invalid");
+                    assertEqualServiceEndpoint(GRPC_PROXY_ENDPOINT_IP, node.grpcProxyEndpoint());
                 }));
     }
 
@@ -337,42 +314,83 @@ public class NodeCreateTest {
      */
     @LeakyEmbeddedHapiTest(
             reason = NEEDS_STATE_ACCESS,
-            overrides = {"nodes.gossipFqdnRestricted"})
+            overrides = {"nodes.gossipFqdnRestricted", "nodes.webProxyEndpointsEnabled"})
     final Stream<DynamicTest> allFieldsSetHappyCaseForDomains() throws CertificateEncodingException {
-        final var nodeCreate = nodeCreate("nodeCreate")
+        final var nodeCreate = canonicalNodeCreate();
+        return hapiTest(
+                overridingTwo("nodes.gossipFqdnRestricted", "false", "nodes.webProxyEndpointsEnabled", "true"),
+                newKeyNamed(ED_25519_KEY).shape(KeyShape.ED25519),
+                nodeCreate,
+                verifyCanonicalCreate(nodeCreate),
+                viewNode("nodeCreate", node -> {
+                    assertEqualServiceEndpoints(GOSSIP_ENDPOINTS_FQDNS, node.gossipEndpoint());
+                    assertEqualServiceEndpoints(SERVICES_ENDPOINTS_FQDNS, node.serviceEndpoint());
+                    assertEqualServiceEndpoint(GRPC_PROXY_ENDPOINT_FQDN, node.grpcProxyEndpoint());
+                }));
+    }
+
+    @LeakyEmbeddedHapiTest(
+            reason = NEEDS_STATE_ACCESS,
+            overrides = {"nodes.gossipFqdnRestricted"})
+    final Stream<DynamicTest> allFieldsButProxyEndpointSet() throws CertificateEncodingException {
+        final var nodeCreate = canonicalNodeCreate().withNoWebProxyEndpoint();
+        return hapiTest(
+                overriding("nodes.gossipFqdnRestricted", "false"),
+                newKeyNamed(ED_25519_KEY).shape(KeyShape.ED25519),
+                nodeCreate,
+                verifyCanonicalCreate(nodeCreate),
+                // nodes.webProxyEndpointsEnabled should default to false, resulting in a null proxy endpoint
+                viewNode("nodeCreate", node -> {
+                    assertEqualServiceEndpoints(GOSSIP_ENDPOINTS_FQDNS, node.gossipEndpoint());
+                    assertEqualServiceEndpoints(SERVICES_ENDPOINTS_FQDNS, node.serviceEndpoint());
+                    assertNull(node.grpcProxyEndpoint());
+                }));
+    }
+
+    @LeakyHapiTest(overrides = {"nodes.gossipFqdnRestricted"})
+    final Stream<DynamicTest> webProxySetWhenNotEnabledReturnsNotSupported() throws CertificateEncodingException {
+        final var nodeCreate = canonicalNodeCreate();
+        return hapiTest(
+                overriding("nodes.gossipFqdnRestricted", "false"),
+                newKeyNamed(ED_25519_KEY).shape(KeyShape.ED25519),
+                nodeCreate.hasKnownStatus(GRPC_WEB_PROXY_NOT_SUPPORTED));
+    }
+
+    private static HapiNodeCreate canonicalNodeCreate() throws CertificateEncodingException {
+        return nodeCreate("nodeCreate")
                 .description("hello")
                 .gossipCaCertificate(gossipCertificates.getFirst().getEncoded())
                 .grpcCertificateHash("hash".getBytes())
-                .accountId(asAccount("0.0.100"))
-                .gossipEndpoint(GOSSIP_ENDPOINTS)
-                .serviceEndpoint(SERVICES_ENDPOINTS)
+                .accountNum(100)
+                // Defaults to FQDN's for all endpoints
+                .gossipEndpoint(GOSSIP_ENDPOINTS_FQDNS)
+                .serviceEndpoint(SERVICES_ENDPOINTS_FQDNS)
+                .grpcWebProxyEndpoint(GRPC_PROXY_ENDPOINT_FQDN)
                 .adminKey(ED_25519_KEY)
                 .hasPrecheck(OK)
                 .hasKnownStatus(SUCCESS);
-        return hapiTest(
-                newKeyNamed(ED_25519_KEY).shape(KeyShape.ED25519),
-                overriding("nodes.gossipFqdnRestricted", "false"),
-                nodeCreate,
-                viewNode("nodeCreate", node -> {
-                    assertEquals("hello", node.description(), "Description invalid");
-                    try {
-                        assertEquals(
-                                ByteString.copyFrom(
-                                        gossipCertificates.getFirst().getEncoded()),
-                                ByteString.copyFrom(node.gossipCaCertificate().toByteArray()),
-                                "Gossip CA invalid");
-                    } catch (CertificateEncodingException e) {
-                        throw new RuntimeException(e);
-                    }
-                    assertEquals(
-                            ByteString.copyFrom("hash".getBytes()),
-                            ByteString.copyFrom(node.grpcCertificateHash().toByteArray()),
-                            "GRPC hash invalid");
-                    assertEquals(100, node.accountId().accountNum(), "Account ID invalid");
-                    assertEqualServiceEndpoints(GOSSIP_ENDPOINTS, node.gossipEndpoint());
-                    assertEqualServiceEndpoints(SERVICES_ENDPOINTS, node.serviceEndpoint());
-                    assertEquals(toPbj(nodeCreate.getAdminKey()), node.adminKey(), "Admin key invalid");
-                }));
+    }
+
+    private static ViewNodeOp verifyCanonicalCreate(final HapiNodeCreate nodeCreate) {
+        return viewNode("nodeCreate", node -> {
+            assertEquals("hello", node.description(), "Description invalid");
+            try {
+                assertEquals(
+                        ByteString.copyFrom(gossipCertificates.getFirst().getEncoded()),
+                        ByteString.copyFrom(node.gossipCaCertificate().toByteArray()),
+                        "Gossip CA invalid");
+            } catch (CertificateEncodingException e) {
+                throw new RuntimeException(e);
+            }
+            assertEquals(
+                    ByteString.copyFrom("hash".getBytes()),
+                    ByteString.copyFrom(node.grpcCertificateHash().toByteArray()),
+                    "GRPC hash invalid");
+            assertNotNull(node.accountId(), "Account ID invalid");
+            assertEquals(100, node.accountId().accountNum(), "Account ID invalid");
+            assertNotNull(nodeCreate.getAdminKey(), " Admin key invalid");
+            assertEquals(toPbj(nodeCreate.getAdminKey()), node.adminKey(), "Admin key invalid");
+        });
     }
 
     /**
@@ -395,49 +413,44 @@ public class NodeCreateTest {
      */
     @EmbeddedHapiTest(MUST_SKIP_INGEST)
     final Stream<DynamicTest> validateFees() throws CertificateEncodingException {
-        return defaultHapiSpec("validateFees")
-                .given(
-                        newKeyNamed(ED_25519_KEY).shape(KeyShape.ED25519),
-                        newKeyNamed("testKey"),
-                        newKeyNamed("randomAccount"),
-                        cryptoCreate("payer").balance(10_000_000_000L),
-                        // Submit to a different node so ingest check is skipped
-                        nodeCreate("ntb")
-                                .adminKey(ED_25519_KEY)
-                                .payingWith("payer")
-                                .signedBy("payer")
-                                .setNode("0.0.4")
-                                .gossipCaCertificate(
-                                        gossipCertificates.getFirst().getEncoded())
-                                .hasKnownStatus(UNAUTHORIZED)
-                                .via("nodeCreationFailed"))
-                .when()
-                .then(
-                        getTxnRecord("nodeCreationFailed").logged(),
-                        // Validate that the failed transaction charges the correct fees.
-                        validateChargedUsdWithin("nodeCreationFailed", 0.001, 3),
-                        nodeCreate("ntb")
-                                .adminKey(ED_25519_KEY)
-                                .fee(ONE_HBAR)
-                                .gossipCaCertificate(
-                                        gossipCertificates.getFirst().getEncoded())
-                                .via("nodeCreation"),
-                        getTxnRecord("nodeCreation").logged(),
-                        // But, note that the fee will not be charged for privileged payer
-                        // The fee is charged here because the payer is not privileged
-                        validateChargedUsdWithin("nodeCreation", 0.0, 0.0),
+        return hapiTest(
+                newKeyNamed(ED_25519_KEY).shape(KeyShape.ED25519),
+                newKeyNamed("testKey"),
+                newKeyNamed("randomAccount"),
+                cryptoCreate("payer").balance(10_000_000_000L),
+                // Submit to a different node so ingest check is skipped
+                nodeCreate("ntb")
+                        .adminKey(ED_25519_KEY)
+                        .payingWith("payer")
+                        .signedBy("payer")
+                        .setNode("4")
+                        .gossipCaCertificate(gossipCertificates.getFirst().getEncoded())
+                        .hasKnownStatus(UNAUTHORIZED)
+                        .via("nodeCreationFailed"),
+                getTxnRecord("nodeCreationFailed").logged(),
+                // Validate that the failed transaction charges the correct fees.
+                validateChargedUsdWithin("nodeCreationFailed", 0.001, 3),
+                nodeCreate("ntb")
+                        .adminKey(ED_25519_KEY)
+                        .fee(ONE_HBAR)
+                        .gossipCaCertificate(gossipCertificates.getFirst().getEncoded())
+                        .via("nodeCreation"),
+                getTxnRecord("nodeCreation").logged(),
+                // But, note that the fee will not be charged for privileged payer
+                // The fee is charged here because the payer is not privileged
+                validateChargedUsdWithin("nodeCreation", 0.0, 0.0),
 
-                        // Submit with several signatures and the price should increase
-                        nodeCreate("ntb")
-                                .adminKey(ED_25519_KEY)
-                                .payingWith("payer")
-                                .signedBy("payer", "randomAccount", "testKey")
-                                .setNode("0.0.4")
-                                .gossipCaCertificate(
-                                        gossipCertificates.getLast().getEncoded())
-                                .hasKnownStatus(UNAUTHORIZED)
-                                .via("multipleSigsCreation"),
-                        validateChargedUsdWithin("multipleSigsCreation", 0.0011276316, 3.0));
+                // Submit with several signatures and the price should increase
+                nodeCreate("ntb")
+                        .adminKey(ED_25519_KEY)
+                        .payingWith("payer")
+                        .signedBy("payer", "randomAccount", "testKey")
+                        .sigMapPrefixes(uniqueWithFullPrefixesFor("payer", "randomAccount", "testKey"))
+                        .setNode("4")
+                        .gossipCaCertificate(gossipCertificates.getLast().getEncoded())
+                        .hasKnownStatus(UNAUTHORIZED)
+                        .via("multipleSigsCreation"),
+                validateChargedUsdWithin("multipleSigsCreation", 0.0011276316, 3.0));
     }
 
     /**
@@ -447,50 +460,44 @@ public class NodeCreateTest {
     @EmbeddedHapiTest(MUST_SKIP_INGEST)
     final Stream<DynamicTest> validateFeesInsufficientAmount() throws CertificateEncodingException {
         final String description = "His vorpal blade went snicker-snack!";
-        return defaultHapiSpec("validateFees")
-                .given(
-                        newKeyNamed(ED_25519_KEY).shape(KeyShape.ED25519),
-                        newKeyNamed("testKey"),
-                        newKeyNamed("randomAccount"),
-                        cryptoCreate("payer").balance(10_000_000_000L),
-                        // Submit to a different node so ingest check is skipped
-                        nodeCreate("ntb")
-                                .adminKey(ED_25519_KEY)
-                                .payingWith("payer")
-                                .signedBy("payer")
-                                .description(description)
-                                .setNode("0.0.4")
-                                .gossipCaCertificate(
-                                        gossipCertificates.getFirst().getEncoded())
-                                .fee(1)
-                                .hasKnownStatus(INSUFFICIENT_TX_FEE)
-                                .via("nodeCreationFailed"))
-                .when()
-                .then(
-                        getTxnRecord("nodeCreationFailed").logged(),
-                        nodeCreate("ntb")
-                                .adminKey(ED_25519_KEY)
-                                .description(description)
-                                .gossipCaCertificate(
-                                        gossipCertificates.getFirst().getEncoded())
-                                .via("nodeCreation"),
-                        getTxnRecord("nodeCreation").logged(),
-                        // But, note that the fee will not be charged for privileged payer
-                        // The fee is charged here because the payer is not privileged
-                        validateChargedUsdWithin("nodeCreation", 0.0, 0.0),
+        return hapiTest(
+                newKeyNamed(ED_25519_KEY).shape(KeyShape.ED25519),
+                newKeyNamed("testKey"),
+                newKeyNamed("randomAccount"),
+                cryptoCreate("payer").balance(10_000_000_000L),
+                // Submit to a different node so ingest check is skipped
+                nodeCreate("ntb")
+                        .adminKey(ED_25519_KEY)
+                        .payingWith("payer")
+                        .signedBy("payer")
+                        .description(description)
+                        .setNode("4")
+                        .gossipCaCertificate(gossipCertificates.getFirst().getEncoded())
+                        .fee(1)
+                        .hasKnownStatus(INSUFFICIENT_TX_FEE)
+                        .via("nodeCreationFailed"),
+                getTxnRecord("nodeCreationFailed").logged(),
+                nodeCreate("ntb")
+                        .adminKey(ED_25519_KEY)
+                        .description(description)
+                        .gossipCaCertificate(gossipCertificates.getFirst().getEncoded())
+                        .via("nodeCreation"),
+                getTxnRecord("nodeCreation").logged(),
+                // But, note that the fee will not be charged for privileged payer
+                // The fee is charged here because the payer is not privileged
+                validateChargedUsdWithin("nodeCreation", 0.0, 0.0),
 
-                        // Submit with several signatures and the price should increase
-                        nodeCreate("ntb")
-                                .adminKey(ED_25519_KEY)
-                                .payingWith("payer")
-                                .signedBy("payer", "randomAccount", "testKey")
-                                .description(description)
-                                .setNode("0.0.4")
-                                .gossipCaCertificate(
-                                        gossipCertificates.getLast().getEncoded())
-                                .fee(1)
-                                .hasKnownStatus(INSUFFICIENT_TX_FEE)
-                                .via("multipleSigsCreation"));
+                // Submit with several signatures and the price should increase
+                nodeCreate("ntb")
+                        .adminKey(ED_25519_KEY)
+                        .payingWith("payer")
+                        .signedBy("payer", "randomAccount", "testKey")
+                        .description(description)
+                        .setNode("4")
+                        .gossipCaCertificate(gossipCertificates.getLast().getEncoded())
+                        .fee(1)
+                        .hasKnownStatus(INSUFFICIENT_TX_FEE)
+                        .via("multipleSigsCreation"));
     }
 
     @HapiTest
@@ -541,7 +548,7 @@ public class NodeCreateTest {
     @DisplayName("Check default setting, gossipEndpoint can not have domain names")
     final Stream<DynamicTest> gossipEndpointHaveDomainNameFail() throws CertificateEncodingException {
         return hapiTest(nodeCreate("testNode")
-                .gossipEndpoint(GOSSIP_ENDPOINTS)
+                .gossipEndpoint(GOSSIP_ENDPOINTS_FQDNS)
                 .gossipCaCertificate(gossipCertificates.getFirst().getEncoded())
                 .hasKnownStatus(GOSSIP_ENDPOINT_CANNOT_HAVE_FQDN));
     }
@@ -557,21 +564,96 @@ public class NodeCreateTest {
                         .hasPrecheck(NOT_SUPPORTED));
     }
 
+    @EmbeddedHapiTest(NEEDS_STATE_ACCESS)
+    final Stream<DynamicTest> createNodeWorkWithTreasuryPayer() throws CertificateEncodingException {
+        return hapiTest(
+                newKeyNamed("adminKey"),
+                nodeCreate("testNode")
+                        .adminKey("adminKey")
+                        .payingWith(DEFAULT_PAYER)
+                        .gossipCaCertificate(gossipCertificates.getFirst().getEncoded())
+                        .description("newNode"),
+                viewNode("testNode", node -> assertEquals("newNode", node.description(), "Description invalid")));
+    }
+
+    @EmbeddedHapiTest(NEEDS_STATE_ACCESS)
+    final Stream<DynamicTest> createNodeWorkWithAddressBookAdminPayer() throws CertificateEncodingException {
+        return hapiTest(
+                newKeyNamed("adminKey"),
+                nodeCreate("testNode")
+                        .adminKey("adminKey")
+                        .payingWith(ADDRESS_BOOK_CONTROL)
+                        .gossipCaCertificate(gossipCertificates.getFirst().getEncoded())
+                        .description("newNode"),
+                viewNode("testNode", node -> assertEquals("newNode", node.description(), "Description invalid")));
+    }
+
+    @EmbeddedHapiTest(NEEDS_STATE_ACCESS)
+    final Stream<DynamicTest> createNodeWorkWithSysAdminPayer() throws CertificateEncodingException {
+        return hapiTest(
+                newKeyNamed("adminKey"),
+                nodeCreate("testNode")
+                        .adminKey("adminKey")
+                        .payingWith(SYSTEM_ADMIN)
+                        .gossipCaCertificate(gossipCertificates.getFirst().getEncoded())
+                        .description("newNode"),
+                viewNode("testNode", node -> assertEquals("newNode", node.description(), "Description invalid")));
+    }
+
+    @HapiTest
+    final Stream<DynamicTest> createNodeFailsWithRegPayer() throws CertificateEncodingException {
+        return hapiTest(
+                cryptoCreate("payer").balance(ONE_HUNDRED_HBARS),
+                newKeyNamed("adminKey"),
+                nodeCreate("testNode")
+                        .adminKey("adminKey")
+                        .payingWith("payer")
+                        .gossipCaCertificate(gossipCertificates.getFirst().getEncoded())
+                        .description("newNode")
+                        .hasKnownStatus(UNAUTHORIZED));
+    }
+
+    @LeakyHapiTest(overrides = {"nodes.webProxyEndpointsEnabled"})
+    final Stream<DynamicTest> createNodeWithDefaultGrpcProxyFails() throws CertificateEncodingException {
+        return hapiTest(
+                overriding("nodes.webProxyEndpointsEnabled", "true"),
+                newKeyNamed("adminKey"),
+                nodeCreate("testNode")
+                        .adminKey("adminKey")
+                        .gossipCaCertificate(gossipCertificates.getFirst().getEncoded())
+                        .grpcWebProxyEndpoint(ServiceEndpoint.getDefaultInstance())
+                        .description("newNode")
+                        .hasKnownStatus(INVALID_ENDPOINT));
+    }
+
     private static void assertEqualServiceEndpoints(
             List<com.hederahashgraph.api.proto.java.ServiceEndpoint> expected,
             List<com.hedera.hapi.node.base.ServiceEndpoint> actual) {
-        assertEquals(expected.size(), actual.size(), "Service endpoints size invalid");
+        assertEquals(
+                expected.size(),
+                actual.size(),
+                "Service endpoints sizes don't match: expected " + expected.size() + " but got " + actual.size());
         for (int i = 0; i < expected.size(); i++) {
-            assertEquals(
-                    ByteString.copyFrom(expected.get(i).getIpAddressV4().toByteArray()),
-                    ByteString.copyFrom(actual.get(i).ipAddressV4().toByteArray()),
-                    "Service endpoint IP address invalid");
-            assertEquals(
-                    expected.get(i).getDomainName(),
-                    actual.get(i).domainName(),
-                    "Service endpoint domain name invalid");
-            assertEquals(expected.get(i).getPort(), actual.get(i).port(), "Service endpoint port invalid");
+            assertEqualServiceEndpoint(expected.get(i), actual.get(i));
         }
+    }
+
+    private static void assertEqualServiceEndpoint(
+            com.hederahashgraph.api.proto.java.ServiceEndpoint expected,
+            com.hedera.hapi.node.base.ServiceEndpoint actual) {
+        if (expected == null && actual == null) {
+            return;
+        }
+        if (actual == null) {
+            throw new AssertionError("Service endpoint is null when non-null was expected");
+        }
+
+        assertEquals(
+                ByteString.copyFrom(expected.getIpAddressV4().toByteArray()),
+                ByteString.copyFrom(actual.ipAddressV4().toByteArray()),
+                "Service endpoint IP address invalid");
+        assertEquals(expected.getDomainName(), actual.domainName(), "Service endpoint domain name invalid");
+        assertEquals(expected.getPort(), actual.port(), "Service endpoint port invalid");
     }
 
     public static List<X509Certificate> generateX509Certificates(final int n) {
