@@ -1,19 +1,4 @@
-/*
- * Copyright (C) 2021-2024 Hedera Hashgraph, LLC
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *      http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
-
+// SPDX-License-Identifier: Apache-2.0
 package com.hedera.services.yahcli.commands.files;
 
 import static com.hedera.services.yahcli.output.CommonMessages.COMMON_MESSAGES;
@@ -114,20 +99,14 @@ public class SysFileUploadCommand implements Callable<Integer> {
 
         var delegate = isSpecialFile()
                 ? new SysFileUploadSuite(
-                        bytesPerAppend,
-                        appendsPerBurst,
-                        restartFromFailure,
-                        srcDir,
-                        config.asSpecConfig(),
-                        sysFile,
-                        dryRun)
-                : new SysFileUploadSuite(srcDir, config.asSpecConfig(), sysFile, dryRun);
+                        bytesPerAppend, appendsPerBurst, restartFromFailure, srcDir, config, sysFile, dryRun)
+                : new SysFileUploadSuite(srcDir, config, sysFile, dryRun);
 
         delegate.runSuiteSync();
 
         final var finalSpecs = delegate.getFinalSpecs();
         if (!finalSpecs.isEmpty()) {
-            if (finalSpecs.get(0).getStatus() == HapiSpec.SpecStatus.PASSED) {
+            if (finalSpecs.getFirst().getStatus() == HapiSpec.SpecStatus.PASSED) {
                 COMMON_MESSAGES.info("SUCCESS - Uploaded all requested system files");
             } else {
                 COMMON_MESSAGES.warn("FAILED Uploading requested system files");
