@@ -1,29 +1,15 @@
-/*
- * Copyright (C) 2021-2024 Hedera Hashgraph, LLC
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *      http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
-
+// SPDX-License-Identifier: Apache-2.0
 package com.hedera.services.yahcli.commands.system;
 
+import static com.hedera.services.bdd.spec.HapiPropertySource.asEntityString;
 import static com.hedera.services.yahcli.output.CommonMessages.COMMON_MESSAGES;
 
 import com.hedera.services.bdd.spec.HapiSpec;
 import com.hedera.services.yahcli.Yahcli;
 import com.hedera.services.yahcli.config.ConfigUtils;
 import com.hedera.services.yahcli.suites.UpgradeHelperSuite;
-import com.swirlds.common.utility.CommonUtils;
 import java.util.concurrent.Callable;
+import org.hiero.base.utility.CommonUtils;
 import picocli.CommandLine;
 
 @CommandLine.Command(
@@ -49,13 +35,14 @@ public class PrepareUpgradeCommand implements Callable<Integer> {
     public Integer call() throws Exception {
         final var config = ConfigUtils.configFrom(yahcli);
 
-        final var upgradeFile = "0.0." + upgradeFileNum;
+        final var upgradeFile =
+                asEntityString(config.shard().getShardNum(), config.realm().getRealmNum(), upgradeFileNum);
         final var unhexedHash = CommonUtils.unhex(upgradeFileHash);
-        final var delegate = new UpgradeHelperSuite(config.asSpecConfig(), unhexedHash, upgradeFile);
+        final var delegate = new UpgradeHelperSuite(config, unhexedHash, upgradeFile);
 
         delegate.runSuiteSync();
 
-        if (delegate.getFinalSpecs().get(0).getStatus() == HapiSpec.SpecStatus.PASSED) {
+        if (delegate.getFinalSpecs().getFirst().getStatus() == HapiSpec.SpecStatus.PASSED) {
             COMMON_MESSAGES.info("SUCCESS - NMT upgrade staged from " + upgradeFile + " artifacts ZIP");
         } else {
             COMMON_MESSAGES.warn("FAILED - NMT software upgrade is not in staged ");
